# serdeio

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.serena/: project.yml
.serena/memories/: code_style_conventions.md  development_workflow.md  docstring_fixes_session.md  project_overview.md  style_conventions.md  suggested_commands.md  task_completion.md
examples/: anyhow.rs  json2jsonl.rs  json2yaml.rs  users.json
skills/serdeio/: SKILL.md
src/: backend.rs  common.rs  error.rs  lib.rs  read.rs  types.rs  write.rs
src/backend/: csv.rs  json.rs  jsonlines.rs  messagepack.rs  toml.rs  yaml.rs
