[package]
name = "serdeio"
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["Du Shiqiao <lucidfrontier.45@gmail.com>"]
readme = "README.md"
repository = "https://github.com/lucidfrontier45/serdeio"
documentation = "https://docs.rs/serdeio"
description = "Tiny IO utility library for Rust to serialize/deserialize Serde compatible structs"
keywords = ["serde", "io", "csv", "yaml", "json"]
categories = ["io-util", "serialization"]

[lib]
name = "serdeio"
doctest = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { version = "0.9", optional = true }
csv = { version = "1", optional = true }
anyhow = "1"

[features]
csv = ["dep:csv"]
yaml = ["dep:serde_yaml"]

[package.metadata.docs.rs]
all-features = true
