[package]
name = "serdeio"
version = "0.4.1"
edition = "2024"
license = "MIT"
authors = ["Du Shiqiao <lucidfrontier.45@gmail.com>"]
readme = "README.md"
repository = "https://github.com/lucidfrontier45/serdeio"
documentation = "https://docs.rs/serdeio"
description = "Tiny IO utility library for Rust to serialize/deserialize Serde compatible structs"
keywords = ["serde", "io", "csv", "yaml", "json"]
categories = ["parsing"]

[lib]
name = "serdeio"
doctest = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { version = "0.9", optional = true }
csv = { version = "1", optional = true }
thiserror = "2.0.17"

[features]
csv = ["dep:csv"]
yaml = ["dep:serde_yaml"]

[dev-dependencies]
anyhow = "1.0.100"

[package.metadata.docs.rs]
all-features = true
